# W2

./: README.md  pyproject.toml
data/processed/: _run_meta.json  analytics_table.parquet  orders_clean.parquet  orders_sa.parquet  users.parquet
data/raw/: orders.csv
data/row/: users.csv
notebooks/: eda.ipynb  test.py
reports/: country_analysis_table.csv  monthly_analysis_table.csv  status_analysis_table.csv  summary.md
scripts/: run_day1_load.py  run_day2_load.py  run_day3_build_analytics.py  run_etl.py
src/bootcamp_data/: config.py  etl.py  io.py  joins.py  quality.py  transforms.py
src/bootcamp_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
